<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="stErrType" Id="{69a4d880-ddd2-4b4b-94a7-5e9aed7a10d9}">
    <Declaration><![CDATA[TYPE stErrType :
STRUCT
	horario:DT;
	eErrType:E_ErrType;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>